Map and DM editing.

--- a/dom3ai.qrc
+++ b/dom3ai.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>settings.txt</file>
+        <file>mods/better_independents_v2-1.dm</file>
+        <file>mods/Magicrestriction6.dm</file>
     </qresource>
 </RCC>
