--- a/dom3ai.qrc
+++ b/dom3ai.qrc
@@ -3,5 +3,6 @@
         <file>settings.txt</file>
         <file>mods/better_independents_v2-1.dm</file>
         <file>mods/Magicrestriction6.dm</file>
+        <file>dom3ai.tga</file>
     </qresource>
 </RCC>
