Add MR 7 and 8. Also change province count to spinner and add icon.

--- a/dom3ai.qrc
+++ b/dom3ai.qrc
@@ -4,5 +4,8 @@
         <file>mods/better_independents_v2-1.dm</file>
         <file>mods/Magicrestriction6.dm</file>
         <file>dom3ai.tga</file>
+        <file>mods/Magicrestriction7.dm</file>
+        <file>mods/Magicrestriction8.dm</file>
+        <file>eater.png</file>
     </qresource>
 </RCC>
