--- a/dom3ai.ui
+++ b/dom3ai.ui
@@ -11,7 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dom3 AI++</string>
+   <string>Dominions 3 Single Player Game Generator</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="dom3ai.qrc">
+    <normaloff>:/eater.png</normaloff>:/eater.png</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -153,7 +157,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="numProvinceText">
+         <widget class="QSpinBox" name="numProvincesBox">
           <property name="enabled">
            <bool>false</bool>
           </property>
@@ -163,11 +167,14 @@
             <bold>false</bold>
            </font>
           </property>
-          <property name="maxLength">
-           <number>4</number>
+          <property name="minimum">
+           <number>10</number>
           </property>
-          <property name="readOnly">
-           <bool>false</bool>
+          <property name="maximum">
+           <number>1500</number>
+          </property>
+          <property name="value">
+           <number>100</number>
           </property>
          </widget>
         </item>
@@ -803,6 +810,8 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="dom3ai.qrc"/>
+ </resources>
  <connections/>
 </ui>
