--- a/dom3ai.ui
+++ b/dom3ai.ui
@@ -803,6 +803,16 @@
        <property name="text">
         <string>Generate Game</string>
        </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="quitButton">
+       <property name="text">
+        <string>Quit</string>
+       </property>
       </widget>
      </item>
     </layout>
